quitando mediaquery mal especificado

--- a/Creacion-Virtual/Cliente/index.html
+++ b/Creacion-Virtual/Cliente/index.html
@@ -49,7 +49,7 @@
               SEGUNDOS
              </div>
             </div>
-            <h2>Ahora la plataforma será más fácil de utilizar</br>con las nuevas funcionalidades que estamos desarrollando </br>será más intuitiva para nuestros usuarios.</h2>
+            <h2>Ahora la plataforma será más fácil de utilizar</br>con las nuevas funcionalidades que estamos desarrollando.</h2>
            </div>
            <script src="pace.js"></script>
 
